quarkus-getting-started/k8s/base/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: quarkus-quickstarts
  labels:
    app: quarkus-quickstarts
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quarkus-quickstarts
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: quarkus-quickstarts
        deployment: quarkus-quickstarts
    spec:
      containers:
        - name: quarkus-quickstarts
          image: >-
            changeme
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8443
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
